GS-7917 Adjust height of hover, make CSS consistent in hover across all browsers, fixed overlap of No Thanks, Save, and Close Window. Todo: error message for state/city not showing up, IE6 error messages not showing up, IE7 whitespace below bottom border of hover

--- a/src/webapp/res/css/community/registration/popup/chooserRegistrationFlowHover.css
+++ b/src/webapp/res/css/community/registration/popup/chooserRegistrationFlowHover.css
@@ -1,6 +1,6 @@
 #mslFlowDialog {
     position: relative;
-    height:480px;
+    height:455px;
 }
 
 #mslFlowDialogBody {
